src/test/ui/suggestions/associated-item-from-array.stderr
error: expected one of `.`, `;`, `?`, or an operator, found `::`
  --> $DIR/associated-item-from-array.rs:13:21
   |
13 |     let _ = [i32; 3]::clone(&a);
   |             --------^^
   |             |       |
   |             |       expected one of `.`, `;`, `?`, or an operator here
   |             help: if you meant to use an associated item: `<[i32; 3]>::`

error: aborting due to previous error

